# S3F-Improved

./: .gitignore  .jscpd.json  .mega-linter.yml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: baseline-comparison-benchmark.yml  euroc-mh01-smoke.yml  euroc-s3r3-comparison-report.yml  mega-linter.yml  paper-experiment-suite.yml  particle-sensitivity-benchmark.yml  quality-cost-report.yml  s1r2-covariance-diagnostic.yml  s3f-runtime-profile.yml  s3r3-dynamic-highres-reference.yml  s3r3-dynamic-pose.yml  s3r3-dynamic-robustness.yml  s3r3-highres-reference.yml  s3r3-sample-convergence-benefit.yml  s3r3-stress-sweep.yml  se3plusplus-s3f-ci.yml
configs/: relaxed_s3f_pilot.json
results/wp1_s1_r2_relaxed_s3f/: relaxed_s3f_metrics.csv  relaxed_s3f_pilot_note.md
scripts/: reproduce_relaxed_s3f_results.py  reproduce_wp1_results.py
src/se3plusplus_s3f/: __init__.py  cli.py
src/se3plusplus_s3f/s1r2/: __init__.py  baseline_comparison.py  covariance_diagnostic.py  euroc_planar.py  highres_reference.py  plotting.py  quality_cost.py  relaxed_s3f_pilot.py  runtime_profile.py  s3f_common.py
tests/: test_baseline_comparison.py  test_euroc_planar.py  test_euroc_s3r3_comparison_report.py  test_euroc_s3r3_pose.py  test_highres_reference.py  test_quality_cost.py  test_relaxed_s3f_circular.py  test_relaxed_s3f_pilot.py  test_runtime_profile.py  test_s3r3_dynamic_highres_reference.py  test_s3r3_dynamic_pose.py  test_s3r3_dynamic_robustness.py  test_s3r3_highres_reference.py  test_s3r3_manifold_ukf.py  test_s3r3_orientation_basis.py  test_s3r3_relaxed_prototype.py  test_s3r3_stress_sweep.py
tests/reference/: relaxed_s3f_regression_metrics.csv  wp1_relaxed_s3f_regression_config.json
(+20 files in other folders)
